Bug 432704 - Hang everytime at KDE Partition Manager startup after setting Active Backend to KDE Partition Manager Dummy Backend
Summary: Hang everytime at KDE Partition Manager startup after setting Active Backend ...
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.2.0
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords: drkonqi
: 439988 447037 (view as bug list)
Depends on:
Blocks: 439988
  Show dependency treegraph
 
Reported: 2021-02-09 20:26 UTC by Neil Justice
Modified: 2022-01-16 14:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.2
Sentry Crash Report:


Attachments
KDE Partition Manager blank windows before crash after having previously set Dummy Backend (47.62 KB, image/png)
2021-02-09 20:31 UTC, Neil Justice
Details
KDE Partition Manager Dr. Konqi crash dialog after clicking the X while KDE Partition Manager is hanging at startup (19.92 KB, image/png)
2021-02-09 20:33 UTC, Neil Justice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Neil Justice 2021-02-09 20:26:11 UTC
Application: partitionmanager (4.2.0)

Qt Version: 5.15.2
Frameworks Version: 5.78.0
Operating System: Linux 5.10.13-200.fc33.x86_64 x86_64
Windowing system: X11
Distribution: Fedora 33 (KDE Plasma)

-- Information about the crash:
- What I was doing when the application crashed:

Launched KDE Partition Manager. The program loads with all blanks windows for each GUI pane and then proceeds to rapidly flicker a blue rectangle around the "Please select a device" window while displaying a spinning loading cursor indefinitely. Clicking on menu items does nothing and only clicking the X works to close the program with a crash.

- Custom settings of the application:

Before when KDE Partition Manager would load successfully I had not yet set Active Backend to KDE Partition Manager Dummy Backend.

The crash can be reproduced every time.

-- Backtrace:
Application: KDE Partition Manager (partitionmanager), signal: Aborted

[KCrash Handler]
#4  0x00007f0d4af069d5 in raise () from /lib64/libc.so.6
#5  0x00007f0d4aeef8a4 in abort () from /lib64/libc.so.6
#6  0x00007f0d4b32d48f in QMessageLogger::fatal(char const*, ...) const () from /lib64/libQt5Core.so.5
#7  0x00007f0d4b32dcfb in QThread::~QThread() [clone .cold] () from /lib64/libQt5Core.so.5
#8  0x00007f0d4caf6f47 in DeviceScanner::~DeviceScanner() () from /lib64/libkpmcore.so.10
#9  0x00007f0d4b52593a in QObjectPrivate::deleteChildren() () from /lib64/libQt5Core.so.5
#10 0x00007f0d4bfcf246 in QWidget::~QWidget() () from /lib64/libQt5Widgets.so.5
#11 0x000056252967c5d4 in MainWindow::~MainWindow() ()
#12 0x00007f0d4b525b21 in QObject::event(QEvent*) () from /lib64/libQt5Core.so.5
#13 0x00007f0d4ca74dbd in KXmlGuiWindow::event(QEvent*) () from /lib64/libKF5XmlGui.so.5
#14 0x00007f0d4bf92ec3 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#15 0x00007f0d4b4fdbd8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#16 0x00007f0d4b5008c7 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /lib64/libQt5Core.so.5
#17 0x00007f0d4b54ac27 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5Core.so.5
#18 0x00007f0d49d79a5f in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#19 0x00007f0d49dcba58 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#20 0x00007f0d49d76e33 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#21 0x00007f0d4b54a6f3 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#22 0x00007f0d4b4fc57b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#23 0x00007f0d4b5041b4 in QCoreApplication::exec() () from /lib64/libQt5Core.so.5
#24 0x0000562529677d7f in main ()
[Inferior 1 (process 3558) detached]

Possible duplicates by query: bug 430799, bug 430393, bug 424911, bug 423951, bug 423132.

Reported using DrKonqi
Comment 1 Neil Justice 2021-02-09 20:31:16 UTC
Created attachment 135540 [details]
KDE Partition Manager blank windows before crash after having previously set Dummy Backend
Comment 2 Neil Justice 2021-02-09 20:33:46 UTC
Created attachment 135541 [details]
KDE Partition Manager Dr. Konqi crash dialog after clicking the X while KDE Partition Manager is hanging at startup
Comment 3 Andrius Štikonas 2021-02-09 20:56:01 UTC
Indeed, I can reproduce. Thanks for reporting.
Comment 4 Andrius Štikonas 2021-12-16 11:26:01 UTC
*** Bug 447037 has been marked as a duplicate of this bug. ***
Comment 5 Andrius Štikonas 2022-01-16 14:23:37 UTC
Git commit 72b4142bcb48ef35f1533e5e5fa491cf15414952 by Andrius Štikonas.
Committed on 16/01/2022 at 14:22.
Pushed by stikonas into branch 'master'.

Fix infinite recursion in dummy backend.

M  +1    -1    src/plugins/dummy/dummybackend.cpp

https://invent.kde.org/system/kpmcore/commit/72b4142bcb48ef35f1533e5e5fa491cf15414952
Comment 6 Andrius Štikonas 2022-01-16 14:29:18 UTC
Git commit 7f41b7c2aac54c68788ed31d4ebcb7cd509d6c83 by Andrius Štikonas.
Committed on 16/01/2022 at 14:29.
Pushed by stikonas into branch 'release/21.12'.

Fix infinite recursion in dummy backend.

M  +1    -1    src/plugins/dummy/dummybackend.cpp

https://invent.kde.org/system/kpmcore/commit/7f41b7c2aac54c68788ed31d4ebcb7cd509d6c83
Comment 7 Andrius Štikonas 2022-01-16 14:31:01 UTC
*** Bug 439988 has been marked as a duplicate of this bug. ***