Fix infinite recursion in dummy backend.

BUG: 432704